2004-10-31  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
	Do not return before actually copying the value.
	* examples/book/treeview/: Added filter_modify example, to show the 
	use of set_modify_func().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.hg: Regenerated with h2defs.py.
	* gtk/src/window.hg: Added drag_dest_add_text_targets(), 
	drag_dest_add_uri_targets(), drag_dest_add_image_targets(), 
	drag_source_add_text_targets(), drag_source_add_uri_targets(),
	drag_source_add_image_targets().
	* gtk/src/aboutdialog: Added get_logo_icon_name(), and 
	set_logo_icon_name().
	* gtk/src/clipboard.hg: Added wait_is_target_available(), 
	set_can_store(), store()
	* gtk/src/filechooserbutton: Added get/set_width_chars()
	* gtk/src/image.hg: Added set_from_icon_name(), get/set_pixel_size(), 
	get_icon_name()
	* gtk/src/label.hg: Added get/set_width_chars().
	* gtk/src/messagedialog.[hg|ccg]: Made set_message() public and 
	reimplemented it with gtk_message_dialog_format_secondary_text() and 
	gtk_message_dialog_format_secondary_markup() instead of the private 
	label field.
	* gtk/src/selectiondata.hg: Added get/set_pixbuf(), get/set_uris().

2004-10-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treemodelfilter.[hg|ccg]: Added implementations of 
	set_value_impl() to ouput a warning when it is used instead of 
	the child model. Added const versions of patch convert methods.
	* gtk/src/treeview.[hg|ccg]: Added _get_base_model() non-public API 
	member method to get the child model, if necessary. Used it in the 
	cell renderer signal handlers instead of get_model().
	* Added examples/book/treeview/filter, from the gtkmm-2-4 branch.

2004-10-16  Gene Ruebsamen  <gene@erachampion.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Added a chapter for the new gtk-2.4 
 	FileChooserDialog.
 	* docs/tutorial/figures/dialogs_filechooser.png: Added a PNG image
 	of the new FileChooserDialog.
